src/test/ui/mismatched_types/unboxed-closures-vtable-mismatch.stderr
error[E0631]: type mismatch in closure arguments
  --> $DIR/unboxed-closures-vtable-mismatch.rs:16:24
   |
LL |     let f = to_fn_mut(|x: usize, y: isize| -> isize { (x as isize) + y });
   |                       ----------------------------- found signature of `fn(usize, isize) -> _`
LL |
LL |     let z = call_it(3, f);
   |             -------    ^ expected signature of `fn(isize, isize) -> _`
   |             |
   |             required by a bound introduced by this call
   |
note: required by a bound in `call_it`
  --> $DIR/unboxed-closures-vtable-mismatch.rs:7:14
   |
LL | fn call_it<F:FnMut(isize,isize)->isize>(y: isize, mut f: F) -> isize {
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `call_it`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0631`.
